Fix home page layout on small screens

--- a/_sass/_global.scss
+++ b/_sass/_global.scss
@@ -14,7 +14,7 @@ html {
 body {
 	font-family: $sans;
 	color: $black;
-	padding: 1.5rem 3%;
+	padding: 3%;
 	min-height: 100%;
 }
 
