--- a/_sass/_vars.scss
+++ b/_sass/_vars.scss
@@ -1,6 +1,6 @@
 $black: darken(#203045, 5);
 $white: #fff;
-$lightgray: rgb(240,240,240);
+$lightgray: rgb(232,230,230);
 
 $yellow: #ffd547;
 $green: teal;
